	on an official retweet.

	* twittering-mode.el: Add a function to report a user as a spammer.
	(twittering-call-api): support a new command
	`block-and-report-as-spammer'.
	(twittering-block-and-report-as-spammer): new function.

	* twittering-mode.el: Add a function to block a user.
	(twittering-call-api): support a new command `block'.
	(twittering-block): new function.

2011-02-05  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Remove a trailing newline from strings
	received from `bit.ly' and `j.mp'. Thanks to mm_o_ig.
	(twittering-tinyurl-services-map): add a post-processing function
	that removes a trailing newline from result of `bit.ly' and
	`j.mp'.

	* twittering-mode.el: Revise some messages. Thanks to Server.
	(twittering-http-get-default-sentinel): revise messages.
	(twittering-show-replied-statuses): likewise.
	(twittering-hide-replied-statuses): likewise.
	(twittering-edit-post-status): likewise.
	(twittering-read-timeline-spec-with-completion): likewise.
	(twittering-other-user-list-interactive): likewise.
	(twittering-direct-message): likewise.
	(twittering-goto-next-status): likewise.
	(twittering-goto-previous-status): likewise.

2011-01-29  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Reimplement `twittering-tinyurl-get' with
	`twittering-send-http-request'.
	(twittering-url-wrapper): removed.
	(twittering-url-insert-file-contents): removed.
	(twittering-url-retrieve-synchronously): removed.
	(twittering-tinyurl-get): reimplemented with
	`twittering-send-http-request'. In addition, the query parameter
	is correcly encoded by `twittering-percent-encode'.

	* twittering-mode.el: Add `is.gd' as a URL shortening service.
	Thanks to Michael Kohl.
	(twittering-tinyurl-service): update the document.
	(twittering-tinyurl-services-map): add an entry for `is.gd'.

	* twittering-mode.el: Extend the format of
	`twittering-tinyurl-services-map'. One can register a service that