@@ -136,6 +136,16 @@
 * ブロック機能
   関数`twittering-block'を追加しました。tweet上でこの関数を呼び出すと、
   その投稿者をブロックできます。
+* アイコン画像保存機能
+  "(setq twittering-use-icon-storage t)"とすることで一度取得・サイズ変
+  更したアイコン画像を専用のファイルに保存しておけるようになりました。
+  この機能はデフォルトでは無効です。次回以降は専用ファイルに格納された
+  画像が優先的に使われますのでアイコン取得・サイズ変更にかかる時間が省
+  けます。
+  アイコンを保存するファイルはデフォルトでは
+  `~/.twittering-mode-icons.gz'ですが`twittering-icon-storage-file'と
+  いう変数で変更できます。あるバージョンのEmacsで生成したアイコン保存
+  ファイルは別のバージョンでは使えない恐れがあるので注意してください。
 * ...
 
 ### バグ修正
